dark mode component and logic with BUG

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ h3 {
   font-style: italic;
 }
 
-body {
+.body {
   background: url(./img/bg.jpg);
   background-position: center;
   background-size: cover;
@@ -46,21 +46,54 @@ body {
   --tag_bg: rgba(249, 0, 0, 0.5);
 }
 
+.body_dark {
+  background: url(./img/bg_dark.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 200vh;
+  font-family: "Lato", sans-serif;
+  width: 100%;
+  color: var(--text);
+  --bg: rgba(237, 237, 237, 0.5);
+  --bg_hover: rgba(255, 136, 75, 0.5);
+  --light_accent: #ff884b;
+  --verylight_accent: #ffc9ad;
+  --dark_accent: #ff6118;
+  --text: #fff;
+  --white: #1c1121;
+  --off_white: #d3d3d3;
+  --nav_span: rgba(0, 0, 0, 0.5);
+  --shadow: rgba(0, 0, 0, 0.5);
+  --label_txt: rgba(90, 90, 90, 0.5);
+  --label_bg: rgba(255, 255, 255, 0.5);
+  --tag: #ff0000;
+  --tag_bg: rgba(249, 0, 0, 0.5);
+}
+
+.cookai_app {
+  padding-top: 120px;
+  z-index: 5;
+}
+
 .logo_alien svg {
   width: 20%;
 }
 
 .navbar {
   margin: 0 auto;
+  width: 100%;
   display: flex;
   justify-content: center;
   gap: 20px;
-  z-index: 10;
-  position: relative;
+  z-index: 2;
+  position: absolute;
+  top: 0;
 }
 
 .navbar a {
   text-decoration: none;
+  height: fit-content;
 }
 
 .navbar span {
@@ -1375,4 +1408,99 @@ Creator Page
 
 .creator_title .Typewriter__cursor {
   color: var(--shadow);
+}
+
+/* ====================
+Darkmod Page
+==================== */
+
+.darkmode {
+  width: 230px;
+  border: 2px solid var(--white);
+  border-radius: 0 0 30px 30px;
+  background: var(--bg);
+  transform: translateY(-235px);
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.darkmode_active {
+  width: 230px;
+  border-left: 2px solid var(--light_accent);
+  border-right: 2px solid var(--light_accent);
+  border-bottom: 2px solid var(--light_accent);
+  color: var(--white);
+  border-radius: 0 0 30px 30px;
+  background: var(--bg_hover);
+  transform: translateY(-0px);
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.darkmode:hover {
+  border: 2px solid var(--light_accent);
+  font-size: 18px;
+  padding-bottom: 0;
+  border-radius: 0px 0px 30px 30px;
+  background: var(--bg_hover);
+  color: var(--white);
+  transform: translateY(-225px);
+}
+
+.darkmode_logo {
+  display: none;
+}
+
+.darkmode_link {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 900;
+  color: var(--nav_span);
+  pointer-events: none;
+  transition: all 0.3s ease;
+}
+
+.darkmode:hover .darkmode_link {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: 900;
+  color: var(--white);
+  transition: all 0.3s ease;
+}
+
+.darkmode_active .darkmode_link {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: 900;
+  color: var(--white);
+  transition: all 0.3s ease;
+}
+
+fieldset {
+  border: none;
+}
+
+.darkmode_row {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  position: relative;
+  padding: 15px;
+  transition: all 0.3s ease;
+}
+
+.darkmode_row:hover {
+  background: linear-gradient(var(--dark_accent), var(--light_accent));
+}
+
+.darkmode_row img {
+  width: 80px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 8px var(--shadow);
 }
